# QuickTone

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.MD  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-ci.txt  requirements.txt
.github/workflows/: black.yml  deploy-cloudrun.yml  test-coverage.yml
app/: __init__.py  main.py
app/api/: deps.py
app/api/v1/: routes_models.py  routes_sentiment.py
app/core/: config.py  logging.py  performance.py
app/models/: schema.py  types.py
app/services/: cache.py  distilbert_service.py  model_loader.py  sentiment_manager.py  vader_service.py
app/tests/: test_api.py  test_cache.py  test_deps.py  test_distilbert_service.py  test_logging_and_deps.py  test_manager.py  test_model_loader.py  test_routes.py  test_vader.py
benchmark/: benchmark_sentiment.txt  payload-distilbert-sst-2-batch.json  payload-distilbert-sst-2.json  payload-distilbert.json  payload-vader.json
google-cloud/: README.md  service.yaml
ui/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
ui/src/: App.tsx  styles.css
ui/src/lib/: api.ts
